--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ android:
  - extra-google-m2repository
  - extra-android-m2repository # for design library
  - addon-google_apis-google-19 # google play services
- - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
- - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
+ - sys-img-armeabi-v7a-addon-google_apis-$EMULATOR_API
+ - sys-img-armeabi-v7a-addon-google_apis-$ANDROID_API
 
  licenses:
    - android-sdk-preview-license-.+
@@ -50,7 +50,7 @@ before_install:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
