--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,15 @@ install:
 script:
 # force init of adb way before any Gradle task that uses ADB; prevents a timeout error that skips emulators of android-24
   - adb devices
+# Gradle Clean
+  - ./gradlew clean
 # build app and assemble APK, in debug mode
   - ./gradlew assembleDebug
 # run all the local unit tests of app module
   - ./gradlew test
+# run lint checker
+  - ./gradlew lint
+
 env:
   matrix:
   - ANDROID_TARGET=android-24 ANDROID_ABI=armeabi-v7a
