--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,7 @@ script:
   - ./gradlew lint
 
 env:
+  global:
   - ANDROID_HOME=$HOME/android-sdk
   matrix:
   - ANDROID_TARGET=android-24 ANDROID_ABI=armeabi-v7a
